--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "next": "^14.2.35",
     "openai": "^6.10.0",
     "react": "^18.3.0",
